deploy/kube-gateway.oauth2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: kube-gateway-secrets
  labels:
    app: kube-gateway
  name: kube-gateway-svc
  namespace: kube-gateway
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kube-gateway
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-gateway
  name: kube-gateway-proxy
  namespace: kube-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-gateway
  template:
    metadata:
      labels:
        app: kube-gateway
    spec:
      containers:
      - command:
        - ./kube-gateway
        - -api-server=$(API_URL)
        - -ca-file=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - -cert-file=/secrets/tls.crt
        - -key-file=/secrets/tls.key
        - -base-address=https://$(ROUTE_URL)
        - -listen=$(LISTEN)
        - -k8s-bearer-token-passthrough=$(TOKEN_PASSTHROUGH)
        image: quay.io/rh-fieldwork/kube-gateway
        name: kube-gateway
        ports:
        - containerPort: 8080
          name: https
        volumeMounts:
        - mountPath: /secrets
          name: secrets
        - mountPath: /app/web
          name: web-app
      serviceAccountName: kube-gateway-sa
      volumes:
      - name: secrets
        secret:
          secretName: kube-gateway-secrets
      - emptyDir: {}
        name: web-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kube-gateway
  name: kube-gateway-route
  namespace: kube-gateway
spec:
  host: kube-gateway.apps-crc.testing
  port:
    targetPort: 8080
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: kube-gateway-svc
    weight: 100
  wildcardPolicy: None
