deploy/kube-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-gateway
  name: kube-gateway-svc
  namespace: kube-gateway
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kube-gateway
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-gateway
  name: kube-gateway-proxy
  namespace: kube-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-gateway
  template:
    metadata:
      labels:
        app: kube-gateway
    spec:
      containers:
      - command:
        - ./kube-gateway
        - -api-server=$(API_URL)
        - -ca-file=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - -oauth-server-disable
        - -base-address=https://$(ROUTE_URL)
        - -listen=$(LISTEN)
        - -jwt-token-key-file=/secrets/cert.pem
        - -k8s-bearer-token-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -k8s-bearer-token-passthrough=$(TOKEN_PASSTHROUGH)
        image: quay.io/rh-fieldwork/kube-gateway
        name: kube-gateway
        ports:
        - containerPort: 8080
          name: https
        volumeMounts:
        - mountPath: /secrets
          name: secrets
        - mountPath: /app/web
          name: web-app
      serviceAccountName: kube-gateway-sa
      volumes:
      - name: secrets
        secret:
          secretName: kube-gateway-jwt-secret
      - emptyDir: {}
        name: web-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: kube-gateway
  name: kube-gateway-ingress
  namespace: kube-gateway
spec:
  rules:
  - host: kube-gateway.apps.example.com
    http:
      paths:
      - backend:
          service:
            name: kube-gateway-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kube-gateway.apps.example.com
    secretName: kube-gateway-jwt-secret
